css/my-app.css
.notification-count{
  position:absolute;
  top:0px;
  left:50%;
  display:none;
  margin-left:-22px;
  margin-top:-5px;
  padding-top: 3px;
  width:18px;
  height:18px;
  border-radius: 20px;
  line-height: 14px;
  text-align: center;
  vertical-align: middle;
  font-size: 14px;
  color: #fff;
  background: #e60404 !important;
}

.notification-item{
    color:#2b3e50;
}
.mvp-toolbar:before {
    background:none;
}
.toolbar.mvp-toolbar{
    height:45px;
}
.toolbar-inner.mvp-toolbar{
    padding:10px;
}
.tab-link.mvp-tab{
    padding:0px;
}
.logo{
    vertical-align: middle;
    margin:15px;
    text-align: center;
}
.b-right{
    margin:0px;
    float:left;
}
.b-left{
    margin:0px;
    float:right;
}
.contact-page i {
    margin-top:8px;
}
.callVet{
    background:white;
}
.emailVet{
    background:rgb(240,215,75);
}
.vetWebsite{
    background:rgb(46,190,223);
}
.emailSupport{
    background:rgb(125,189,66);
}
.button{
    /*margin:10px;
    background:white;*/
}
.contact-page .button{
    height:60px;
    width:60px;
    margin:40px;
    vertical-align:middle;
    color:#2b3e50;
    /*background:none;*/
    border:none;
    /*color:white;*/
}

input.login-input{
    text-align:center;
}
.splash{
    position:absolute;
    left:0px;
    top:0px;
    width:100%;
    height:100%;
    background:#00BFFF;
    z-index:10000;
}
body, .page,.navbar{
    background:#2b3e50;
    color:#C0C0C0;
}
.content-block-title, .content-block{
    color:white;
}
.card{
    color:rgb(153, 153, 153);
}
.settings-list{
  color:#929292;
}
.point-total{
    font-size:400%;
    color:#27B5F2;
    text-align:center;
}
.savings-total{
    font-size:400%;
    color:#1BA608;
    text-align:center;
}

